@@ -24,7 +24,7 @@
                         <property name="visible">True</property>
                         <child>
                             <widget class="GtkLabel" id="user_fullname_label">
-                                <property name="label" context="True" translatable="True">Full name:</property>
+                                <property name="label" context="True" translatable="True">Full name for the new user:</property>
                                 <property name="events"></property>
                                 <property name="xalign">0.0</property>
                                 <property name="visible">True</property>
@@ -47,7 +47,7 @@
                         </child>
                         <child>
                             <widget class="GtkLabel" id="user_name_label">
-                                <property name="label" context="True" translatable="True">Username:</property>
+                                <property name="label" context="True" translatable="True">Username for your account:</property>
                                 <property name="events"></property>
                                 <property name="xalign">0.0</property>
                                 <property name="visible">True</property>
@@ -73,7 +73,7 @@
                         </child>
                         <child>
                             <widget class="GtkLabel" id="user_password_label">
-                                <property name="label" context="True" translatable="True">Password:</property>
+                                <property name="label" context="True" translatable="True">Choose a password for the new user:</property>
                                 <property name="events"></property>
                                 <property name="xalign">0.0</property>
                                 <property name="visible">True</property>
@@ -99,7 +99,7 @@
                         </child>
                         <child>
                             <widget class="GtkLabel" id="user_password_confirm_label">
-                                <property name="label" context="True" translatable="True">Confirm password:</property>
+                                <property name="label" context="True" translatable="True">Re-enter password to verify:</property>
                                 <property name="events"></property>
                                 <property name="xalign">0.0</property>
                                 <property name="visible">True</property>
